# Freq

./: .gitignore  .mcp.json  AGENTS.md  README.md  run-kiosk.sh  run-web.sh
.gemini/: settings.json
.github/workflows/: display-firmware.yml  kiosk-terminal.yml  release.yml  web.yml
display-firmware/: README.md  platformio.ini
display-firmware/src/: ConfigPortal.cpp  ConfigPortal.h  Hub75Driver.cpp  Hub75Driver.h  IDisplayDriver.h  MqttDisplayClient.cpp  MqttDisplayClient.h  TelnetLogger.cpp  TelnetLogger.h  main.cpp  wifi_config.h.example
docs/: ESP32_S3_Hardware_Bugs.md
docs/superpowers/plans/: 2026-06-25-p10-hub75-display.md  2026-06-25-pickleball-court-prompter-implementation.md  2026-07-06-display-service-mirror.md  2026-07-06-member-account-crud-fix.md  2026-07-19-multi-panel-display-phase1.md  2026-07-23-display-discovery-and-override.md  2026-07-23-display-subpages-bgcolor-space-plan.md
docs/superpowers/specs/: 2026-06-25-p10-hub75-display-design.md  2026-06-25-pickleball-court-prompter-firmware-design.md  2026-07-05-display-service-mirror-design.md  2026-07-06-member-account-crud-fix-design.md  2026-07-19-multi-panel-display-designer.md  2026-07-23-display-discovery-and-override-design.md  2026-07-23-display-subpages-bgcolor-space-design.md
kiosk-terminal/: .gitignore  CMakeLists.txt  README.md  kiosk_config.example.ini  lv_conf.h  lv_drv_conf.h  partitions.csv  platformio.ini  run.sh  sdkconfig.defaults  sdkconfig.waveshare-7b  update_render.py
kiosk-terminal/.kilo/plans/: 1784102748726-waveshare-rgb-vsync-flicker-fix.md
kiosk-terminal/src/: CMakeLists.txt  idf_component.yml  main.c
kiosk-terminal/src/data/: kiosk_config.h  kiosk_data_provider.h  kiosk_model.h
kiosk-terminal/src/data/live/: live_data_provider.c  live_data_provider.h
kiosk-terminal/src/hal_esp32/: esp32_config_store.c  esp32_display.c  esp32_display.h  esp32_http_transport.c  esp32_main.c  esp32_mqtt_transport.c  esp32_wifi_scanner.c
kiosk-terminal/src/hal_sim/: sim_captive_portal.c  sim_config_store.c  sim_display.c  sim_display.h  sim_http_transport.c  sim_input.c  sim_input.h  sim_main_loop.c  sim_main_loop.h  sim_mqtt_transport.c  sim_pn532.c  sim_wifi_scanner.c
kiosk-terminal/src/net/: board_parser.c  board_parser.h  captive_portal.h  freq_rest_client.c  freq_rest_client.h  http_transport.h  mqtt_transport.h  pn532_i2c.c  pn532_i2c.h  wifi_scanner.h
kiosk-terminal/src/ui/: ui_app.c  ui_app.h
kiosk-terminal/src/ui/screens/: queue_board.c  queue_board.h  screensaver.c  screensaver.h  setup_screen.c  setup_screen.h  terminal_layout.c  terminal_layout.h
kiosk-terminal/src/ui/theme/: kiosk_theme.c  kiosk_theme.h
kiosk-terminal/src/ui/widgets/: booking_stepper.c  booking_stepper.h  court_overview.c  court_overview.h  court_status_card.c  court_status_card.h  queue_list.c  queue_list.h  step_booking_confirm.c  step_booking_confirm.h  step_booking_success.c  step_booking_success.h  step_error.c  step_error.h  step_select_court.c  step_select_court.h  step_select_duration.c  step_select_duration.h  step_select_game_type.c  step_select_game_type.h
web/: .env.local.example  .gitignore  AGENTS.md  PLAN-schedule-derived-status.md  package.json  vercel.json  vitest.config.ts
web/docs/superpowers/plans/: 2026-07-20-zone-borders-and-alignment.md
web/docs/superpowers/specs/: 2026-07-20-paddle-point-rebranding.md  2026-07-20-zone-borders-and-alignment-design.md
web/src/: instrumentation.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/display/: DisplaySequenceEditorV2.tsx  MockValuesPanel.tsx  P10Canvas.test.ts  P10Canvas.tsx  P10Display.tsx  PageToolbar.tsx  TemplateDropdown.tsx  ZonePanel.tsx  color-utils.ts  zone-types.ts
web/src/components/layout/: header.tsx  sidebar.tsx
web/src/components/terminal/: CourtOverview.tsx  CourtStatusCard.tsx  QueueBoard.tsx  TerminalKiosk.tsx
web/src/lib/: mqtt.ts
web/src/lib/api/: openapi.ts
web/src/lib/display/: sports-caster.test.ts  sports-caster.ts
web/src/lib/queue/: advance-serverless.regression.test.ts  board-publisher.ts  board-snapshot.ts  booking-engine.ts  joinqueue.regression.test.ts  queue-advance.regression.test.ts  queue-processor.test.ts  (+6 more)
(+22 files in other folders)
